# archive-diff

./: .gitignore  LICENSE  README.md  setup.cfg  setup.py
archive_diff/: __init__.py  __main__.py  __version__.py  archive_diff.py  archive_format_handler.py  cli_output.py
src/archive_diff/: __main__.py  archive_diff.py  archive_format_handler.py  cli_output.py  diff_data.py  file_comparison.py  utils.py
tests/: test_archive_diff.py  test_archive_format_handler.py
tests/test_files/: .gitignore  create_archives.sh
tests/test_files/simple_archive/dir_in_archive/: file_in_dir.txt
tests/test_files/test_left/: different.txt  only_left.txt  same.txt
tests/test_files/test_right/: different.txt  only_right.txt
