[metadata]
name = archive-diff
version = 0.0.2
author = Jannik Bamberger
author_email = dev@jbamberger.com
description = Tool to compare archive files without extracting them.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/JBamberger/archive-diff
project_urls =
    Bug Tracker = https://github.com/JBamberger/archive-diff/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    archive-diff = archive_diff.__main__:main
